--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -50,5 +50,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{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 }} #this is the key of the access token
+          github_token: ${{secrets.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 }} #this is the key of the access token
           publish_dir: ./todo/build
